--- a/JavaApplication54/src/ventanas/GestionDeProductos.form
+++ b/JavaApplication54/src/ventanas/GestionDeProductos.form
@@ -440,6 +440,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Cerrar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCloseActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnNew">
           <Properties>
